updateability of field with collation support (BUG#5506)

mysql-test/r/view.result:
   Collation with view update
mysql-test/t/view.test:
   Collation with view update
sql/item.h:
  updateability of field with collation support
sql/item_strfunc.h:
  updateability of field with collation support
sql/sql_insert.cc:
  updateability of field with collation support
sql/sql_update.cc:
  updateability of field with collation support
sql/sql_view.cc:
  updateability of field with collation support